k8s/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-api-deployment
  labels:
    app: model-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: model-api
  template:
    metadata:
      labels:
        app: model-api
    spec:
      containers:
      - name: model-api
        image: carprice-api:local
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        
        command: ["uvicorn", "app_api:app", "--host", "0.0.0.0", "--port", "5000", "--workers", "1"]
        readinessProbe:
          httpGet:
            path: /health 
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
